--- a/views/thread/edit.jade
+++ b/views/thread/edit.jade
@@ -26,16 +26,20 @@ block main
                   .col-lg-11.editor
                       textarea.form-control(ng-init="thread.content='#{thread.content}'")
                           |#{thread.content}
-                .form-group.attachement
+                .form-group.uploader-wrap
                   .col-lg-offset-1.col-lg-11
-                    .uploader
-                      .btn.btn-default.fileinput-button
+                    .uploader.clearfix
+                      .btn.btn-default.fileinput-button.col-lg-2
                         i.icon-plus.icon-white
                         span 上传附件
                         input#fileupload(type="file",name="media")
-                      //- #progress.progress
-                      //-   .progress-bar.progress-bar-success
-                      #files.files.clearfix
+                      #progress.col-lg-10.progress-striped.active.progress
+                        .progress-bar(role="progressbar",aria-valuenow="45",aria-valuemin="0",aria-valuemax="100")
+                    ul#files.files
+                      - if (thread.media && thread.media.length > 0)
+                        - each file in thread.media
+                          li.list-group-item.single-file
+                            a(href="#{file.url}",target='_blank') #{file.name}
                 input(type="hidden",ng-model="thread.id",ng-init="thread.id='#{thread._id}'")
       .col-lg-3
           .thread-submit.clearfix.side-cnt
