--- a/views/thread/index.jade
+++ b/views/thread/index.jade
@@ -30,6 +30,20 @@ block content
                             i.icon-edit
                             |编辑
                 .desc!= marked(thread.content)
+            - if (thread.media && thread.media.length > 0)
+                .attachements
+                    - each file in thread.media
+                        .single-file.clearfix
+                            a(href="/download/#{file.id}",target='_blank')
+                                - if (file.type == 'image/jpeg' || file.type == 'image/png' || file.type == 'image/gif')
+                                    img(src="#{file.url}").thumb.pull-left
+                                span.name #{file.name}
+                                span.download 
+                                    i.icon-circle-arrow-down
+                                    | #{file.count.download} 下载 
+                                span.share-count
+                                    i.icon-share-sign
+                                    | #{file.count.share} 分享 
         .board-meta
             i.icon-eye-open
             span.views #{thread.views} 阅读
