--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1439,9 +1439,9 @@ h3.syncing {
 }
 
 .attachements {
-    border-top: 1px solid #ddd;
-    padding: 10px 15px;
     .single-file {
+        border-top: 1px dashed #ddd;
+        padding: 10px 15px;
         .thumb {
             width: 50px;
             .thumbnail()
