--- a/views/thread/index.jade
+++ b/views/thread/index.jade
@@ -25,7 +25,7 @@ block content
                         a(href="/board/#{thread.board.url}") #{thread.board.name}
                     i.icon-time
                     != moment(thread.pubdate).fromNow()
-                    - if ((user && user._id == thread.lz._id) || user.type == 'admin') 
+                    - if ((user && user._id == thread.lz._id) || (user && user.type == 'admin')) 
                         a(href="/thread/#{thread.id}/edit").edit
                             i.icon-edit
                             |编辑
@@ -56,7 +56,7 @@ block content
             i.icon-tumblr
             span.num.ds-thread-count(data-thread-key="#{thread.id}",data-count-type="qqt_reposts")
                 | 加载中...
-            - if (user && user._id == thread.lz._id)
+            - if ((user && user._id == thread.lz._id) || (user && user.type == 'admin'))
                 a(href="/thread/#{thread.id}/edit").edit
                     i.icon-edit
                     |编辑
