--- a/views/layout.jade
+++ b/views/layout.jade
@@ -32,9 +32,11 @@ html(ng-app="candy")
                 .row
                     .col-lg-12
                       #logo.clearfix.fn-left
-                        h1.clearfix
+                        h1.clearfix(ng-controller="cnady.ctrlers.board")
                             a(href="/") #{site.name}
                                 span.desc #{site.desc}
+                            a(ng-click="ls()",href="#")
+                                i.icon-chevron-down
     block banner
         include banner
     #cnt
