--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -146,7 +146,7 @@ a {
         h1 {
             margin-top: 0px;
             margin-bottom: 0;
-            a {
+            a.logo {
                 padding-top: 12px;
                 padding-bottom: 12px;
                 padding-left: 32px;
@@ -159,6 +159,7 @@ a {
                 color: #fff;
                 text-shadow: none;
                 letter-spacing: 2px;
+                float: left;
                 span.desc {
                     font-size: 12px;
                     padding-left: 10px;
@@ -182,6 +183,24 @@ a {
             .br(15px);
             box-shadow: 0px 0px 3px #ddd;
         }
+    }
+    .boards-dropdown {
+        font-size: 18px;
+        float: left;
+        display: block;
+        color: #fff;
+        padding-left: 20px;
+        padding-top: 15px;
+        i {
+            display: block;
+            color: #efefef;
+        }
+        &:hover {
+            i {
+                color: #fff;
+                text-shadow: 0px 0px 1px #ddd;
+            }
+        };
     }
 }
 
@@ -1444,7 +1463,9 @@ h3.syncing {
         padding: 10px 15px;
         .thumb {
             width: 50px;
-            .thumbnail()
+            .thumbnail();
+            .br(0);
+            padding: 1px;
         }
         span {
             font-size: 12px;
@@ -1457,5 +1478,19 @@ h3.syncing {
             color: @key-color;
             display: block;
         }
+        .other-files {
+            display: block;
+            font-size: 30px;
+            background-color: #fff;
+            .thumbnail();
+            .br(0);
+            padding: 6px 1px;
+            width: 50px;
+            text-align: center;
+            color: #999;
+        }
+        &:hover {
+            background-color: #f5f5f5;
+        };
     }
 }
