--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -543,9 +543,6 @@ a {
             display: none !important;
         }
     }
-    .ds-comments-info {
-        // display: none !important;
-    }
 }
 .lz-board {
     padding-bottom: 5px;
@@ -1104,8 +1101,11 @@ a {
 
 .comment-board {
     background-color: #fff;
-    padding: 15px;
-    .box()
+    padding: 10px;
+    .box();
+    .ds-post-self {
+        padding-left: 0px !important;
+    }
 }
 
 .star {
