--- a/views/thread/index.jade
+++ b/views/thread/index.jade
@@ -8,6 +8,8 @@ block meta
 block title
     | #{thread.name}  
 
+block banner
+
 block content
       .board.single-thread
         .pub-main.lz-board
