--- a/views/layout.jade
+++ b/views/layout.jade
@@ -75,17 +75,10 @@ html(ng-app="candy")
             short_name: "#{site.duoshuo.short_name}",
             theme: 'none',
             sso: { 
-               login: "#{href}/signin/",
-               logout: "#{href}/signout/"
+               login: "#{href}/signin",
+               logout: "#{href}/signout"
             }
         };
-        (function() {
-            var ds = document.createElement('script');
-            ds.type = 'text/javascript';ds.async = true;
-            ds.src = 'http://static.duoshuo.com/embed.js';
-            ds.charset = 'UTF-8';
-            (document.getElementsByTagName('head')[0] 
-            || document.getElementsByTagName('body')[0]).appendChild(ds);
-        })();
+    script(type="text/javascript",src="http://static.duoshuo.com/embed.js",charset="UTF-8",async)
     //- custom js
     block js
