--- a/views/thread/index.jade
+++ b/views/thread/index.jade
@@ -41,7 +41,7 @@ block content
                                     img(src="#{file.url}").thumb.pull-left
                                 - else
                                     i.icon-paperclip.other-files.pull-left
-                                a(href="/download/#{file.id}",target='_blank')
+                                a(href="/medias/#{file.id}",target='_blank')
                                     span.name 
                                         |#{file.name}
                                 span.download 
