--- a/views/layout.jade
+++ b/views/layout.jade
@@ -75,8 +75,8 @@ html(ng-app="candy")
             short_name: "#{site.duoshuo.short_name}",
             theme: 'none',
             sso: { 
-               login: "#{href}/signin",
-               logout: "#{href}/signout"
+               login: "#{url}/signin",
+               logout: "#{url}/signout"
             }
         };
     script(type="text/javascript",src="http://static.duoshuo.com/embed.js",charset="UTF-8",async)
