--- a/views/signin.jade
+++ b/views/signin.jade
@@ -25,7 +25,7 @@
             //-         | 我的关注
             li
                 i.icon-angle-right
-                a(href="http://#{site.duoshuo.short_name}.duoshuo.com/logout/?sso=1&redirect_uri=#{href}/signout").signout 登出
+                a(href="http://#{site.duoshuo.short_name}.duoshuo.com/logout/?sso=1&redirect_uri=#{url}/signout").signout 登出
 - else
     #signin.clearfix.side-cnt
         h3.title 登录 #{site.name}
