--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,20 +15,7 @@ html(ng-app="candy")
     link(rel='stylesheet', href='/stylesheets/duoshuo.css')
   body
     block header
-        .bar.clearfix
-            .c1
-            .c2
-            .c3
-            .c4
-            .c5
-            .c6
-            .c7
-            .c8
-            .c9
-            .c10
-            .c11
-            .c12
-        #header(ng-controller="candy.ctrlers.board.list")
+        #header(ng-controller="boards")
             #ihd.container.clearfix
                 .row
                     .col-lg-12
@@ -36,7 +23,7 @@ html(ng-app="candy")
                         h1.clearfix
                             a(href="/").logo #{site.name}
                                 span.desc #{site.desc}
-                            a(ng-click="ls()",href="#boards",ng-class="'open-' + open").boards-dropdown
+                            a(ng-click="list()",href="#boards",ng-class="'open-' + open").boards-dropdown
                                 i(ng-class="arrow")
                         ul.boards-index.clearfix(ng-show="open")
                             li.board-name(ng-repeat="board in boards")
