--- a/views/thread/new.jade
+++ b/views/thread/new.jade
@@ -17,7 +17,7 @@ block banner
 
 block main
   - if (board)
-    #thread(ng-controller="candy.ctrlers.thread.new").thread
+    #thread(ng-controller="threadCreator").thread
       .col-lg-9
              #new.fn-clear
                 form(name="createThread").form-horizontal
