--- a/views/thread/edit.jade
+++ b/views/thread/edit.jade
@@ -13,7 +13,7 @@ block banner
                     | 编辑话题「#{thread.name}」
 
 block main
-    #thread(ng-controller="candy.ctrlers.thread.edit").thread
+    #thread(ng-controller="threadEditor").thread
       .col-lg-9
           #edit.fn-clear
               form(name="createThread").form-horizontal
