--- a/views/member/single.jade
+++ b/views/member/single.jade
@@ -1,25 +1,18 @@
 extends ../layout
 
 block title
-    | #{member.nickname}@#{site.name}
+    | #{member.showname} @ #{site.name}
 
 block banner
-    - if (member.nickname)
-        .banner.clearfix
-            .inner.clearfix.container
-               .row
-                    .col-lg-12
-                        - if (member.avatar)
-                            img.avatar-mid.fn-left(src="#{member.avatar}").fn-left
-                        h2.title #{member.nickname}
-                            - if (member.type == 'admin')
-                                span.admin 
-                                    |( 
-                                    i.icon-user-md
-                                    |管理员 )
-                            span.desc 
-                                - if (member.url)
-                                    a(href="#{member.url}",target="_blank") #{member.url}
+    .banner.clearfix
+        .inner.clearfix.container
+           .row
+                .col-lg-12
+                    img.avatar-mid.fn-left(src="#{member.avatar}").fn-left
+                    h2.title #{member.showname}
+                        span.admin (#{member.role})
+                        span.desc 
+                            a(href="#{member.url}",target="_blank") #{member.url}
 
 block content
     - if (freshman)
@@ -42,16 +35,9 @@ block js
             var duoshuoQuery = {
                 short_name: "#{site.duoshuo.short_name}",
                 sso: { 
-                   login: "#{href}/signin/",
-                   logout: "#{href}/signout/"
+                   login: "#{url}/signin/",
+                   logout: "#{url}/signout/"
                 }
             };
-            (function() {
-                var ds = document.createElement('script');
-                ds.type = 'text/javascript';ds.async = true;
-                ds.src = 'http://static.duoshuo.com/embed.js';
-                ds.charset = 'UTF-8';
-                (document.getElementsByTagName('head')[0] 
-                || document.getElementsByTagName('body')[0]).appendChild(ds);
-            })();
+        script(type="text/javascript",src="http://static.duoshuo.com/embed.js",charset="UTF-8",async)
         script(src="/javascripts/mime.js")
