--- a/views/layout.jade
+++ b/views/layout.jade
@@ -44,7 +44,7 @@ html(ng-app="candy")
     block footer
       #footer
         #ft.clearfix
-            #ift.container.clearfix.copyright &copy; #{new Date().getFullYear()} 『#{site.name}』 #{site.desc} | Powered by 
+            #ift.container.clearfix.copyright &copy; #{new Date().getFullYear()} #{site.name} #{site.desc} | Powered by 
                     a(href="https://github.com/turingou/candy",title="npm install candy").candy #{sys.name} 
                     |@ #{sys.version}
 
